--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-hook-form": "^7.30.0"
+    "react-hook-form": "^7.30.0",
+    "react-query": "^3.37.0"
   },
   "devDependencies": {
     "@types/node": "17.0.24",
