--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "ESNext",
+    "noImplicitAny": false,
     "types": ["vite/client"]
   },
   "include": ["src"]
