--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@types/uuid": "^8.3.4",
     "axios": "^0.27.2",
     "framer-motion": "^6.3.3",
     "react": "^17.0.2",
