--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
     "react-query": "^3.38.1",
-    "react-router-dom": "^5.2.0",
-    "uuid": "^8.3.2"
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.45",
