--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@emotion/styled": "^11.8.1",
     "@types/uuid": "^8.3.4",
     "axios": "^0.27.2",
+    "draft-js": "^0.11.7",
     "framer-motion": "^6.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
     "react-query": "^3.38.1",
