--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/uuid": "^8.3.4",
     "axios": "^0.27.2",
     "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "framer-motion": "^6.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
