--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
     "react-query": "^3.38.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.45",
