--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/nunito-sans": "^4.5.8",
     "@types/uuid": "^8.3.4",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.4",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "framer-motion": "^6.3.3",
